-
Bug
-
Resolution: Done
-
P1: Critical
-
5.6.1, 5.7.0 Beta
-
OS X 10.11.3
-
939b7bfe66221975d3a12a6d0a6dd14d9ad04344, a92c202b4 (dev), ca1ff5f48 (6.5)
Launch Qt "Application Example" and see file and edit menu content. In Qt 5.7-beta file-menu contains empty item and file menu is missing dictation and emonji items. See screenshots of Qt 5.6 (5.7-alpha) and Qt 5.7 differences.
- relates to
-
QTBUG-52931 [Reg 5.6.0->5.6.1] Empty left-over menu items for items that were moved to Application menu
-
- Closed
-
- resulted from
-
QTBUG-31342 QCocoaMenuBar crash when adding shared menu
-
- Closed
-
-
QTBUG-41587 REG: CloseAllWindows from actionmenu cause crash
-
- Closed
-
-
QTBUG-34160 OS X: adding QAction with submenu to more than one menu fails (regression from Qt 4)
-
- Closed
-
For Gerrit Dashboard: QTBUG-53085 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
157856,2 | QCocoaMenuBar: set the native item's title | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |
167659,5 | Cocoa Menus: Introducing Menurama manual test | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |
471785,5 | macOS: Localize title of edit menu's NSMenuItem via AppKit | dev | qt/qtbase | Status: MERGED | +2 | 0 |
474137,2 | macOS: Localize title of edit menu's NSMenuItem via AppKit | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |